--- a/libgcc/soft-fp-2/makefile
+++ b/libgcc/soft-fp-2/makefile
@@ -1,4 +1,4 @@
 all:
-	-gcc -c -O2 -msoft-float -m32 -I../config/i386/ -I.. *.c
+	-gcc -c -O2 -mno-sse -msoft-float -I../config/i386/ -I.. *.c
 	ar -crv libsoft-fp.a *.o
 	rm -f *.o
